# llm-augmented-work-search

./: .gitignore  Makefile  README.md  pyproject.toml
config/: llm.yaml
scripts/: run_pipeline.py
src/adapters/: SourceX.py  base.py
src/api/: main.py
src/config/: loader.py  models.py
src/llm/: agent_interface.py  pure_python_agent.py
src/storage/: db.py  models.py
src/utils/: logger.py
